# drone_vtx_sim

./: README.md  pyproject.toml
configs/: default_5p8g_30khz.yaml
docs/: la9310_mapping.md
scripts/: run_ber_sweep.py  run_range_sweep.py  run_ui.py
src/drone_vtx_sim/: __init__.py  channels.py  fec.py  link_budget.py  models.py  phy.py  sweeps.py  throughput.py  ui.py  ui_plot.py  web_ui.py
tests/: test_core.py
